--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     Nous sommes là pour vous aider à avoir les meilleures photos et vidéo de votre propriété !  
                     
                             
-                            Avec mon savoir de pilotage de drone, je peux vous offrir des vues que vous avez jamais vueavant.
-                    C'est idéale pour mettre votre propriété en valeur. Montrer pas que votre facade de votre maison mais le paysage qui l'entoure.
+                            Avec mon savoir de pilotage de drone, je peux vous offrir des vues que vous n'avez jamais vue par avant.
+                    C'est idéal pour mettre votre propriété en valeur. Montrer pas que votre facade de votre maison mais le paysage qui l'entoure.
                             </strong>
                     </h4>
                 </div>
@@ -445,7 +445,7 @@
                     <h1>Contactez Nous :</h1>
                     <h4>
                        <strong>
-                       N'hesiter pas a nous posser des questions !                               Nous sommes la à votre servive !
+                       N'hesitez pas a nous posser des questions !                               Nous sommes la à votre servive !
                             </strong>
                     </h4>
                 </div>
