--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
 
                 <div class="col-md-3">
 	                <ul class="plan">
-	                    <li class="plan-head">Plan de Base</li>
-	                    <li class="main-price">150€</li>
-	                    <li><strong>15min</strong> de photo ou video airienne</li>
-	                    <li><strong>100</strong> Photos </li>
-                         <li><strong>10min</strong> de Vidéo</li>
-                         <li><strong>Pour 50€ de plus</strong> ->Montage Vidéo</li>
+	                    <li class="plan-head">Plan Photo</li>
+	                    <li class="main-price">130€</li>
+	                    <li><strong>1 heure</strong> de photo ou video airienne</li>
+	                    <li><strong>50</strong> Photos </li>
+                         <li><strong>15min</strong> de Vidéo</li>
+                         <li><strong>Sans</strong> Montage Vidéo</li>
 	                    <li class="bottom">
 	                    	<a href="#" class="btn btn-primary">Plus d'Info</a>
 	                    </li>
@@ -228,10 +228,10 @@
 
 	             <div class="col-md-3">
 	                <ul class="plan">
-	                    <li class="plan-head">SIMPLE PLAN</li>
-	                    <li class="main-price">$199 only</li>
-	                    <li><strong>12</strong> Accounts</li>
-	                    <li><strong>52</strong> Emails</li>
+	                    <li class="plan-head">Plan Vidéo</li>
+	                    <li class="main-price">420€</li>
+	                    <li><strong>1</strong>Demi-journée </li>
+	                    <li><strong></strong> Emails</li>
                          <li><strong>50 GB</strong> Space</li>
                          <li><strong>Free</strong> Support</li>
 	                    <li class="bottom" >
@@ -241,7 +241,7 @@
 	            </div>
    <div class="col-md-3">
 	                <ul class="plan">
-	                    <li class="plan-head">VALUE PLAN</li>
+	                    <li class="plan-head">Plan Photo et Vidéo</li>
 	                    <li class="main-price">$299 only</li>
 	                    <li><strong>12</strong> Accounts</li>
 	                    <li><strong>52</strong> Emails</li>
@@ -255,7 +255,7 @@
 
        <div class="col-md-3">
 	                <ul class="plan">
-	                    <li class="plan-head">ADVANCE PLAN</li>
+	                    <li class="plan-head">Tarif Post-Production</li>
 	                    <li class="main-price">$399 only</li>
 	                    <li><strong>12</strong> Accounts</li>
 	                    <li><strong>52</strong> Emails</li>
