--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="htttp://www.binarytheme.com">NewView </a>
+                <a class="navbar-brand" href="#home">NewView </a>
             </div>
             <!-- Collect the nav links for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
